Add redash repo as dasher-web, complete first tranche of file moves, and update import paths in JS
Signed-off-by: Jim Hawkins <sjjhsjjhsjjh@gmail.com>

--- a/Keyboard/WebResources/Keyboard.html
+++ b/Keyboard/WebResources/Keyboard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><!--
 
-(c) 2020 The ACE Centre-North, UK registered charity 1089313.
+(c) 2021 The ACE Centre-North, UK registered charity 1089313.
 MIT licensed, see https://opensource.org/licenses/MIT
 
 --><head>
@@ -9,12 +9,12 @@ MIT licensed, see https://opensource.org/licenses/MIT
     <style>
         body {font-family: sans-serif;}
     </style>
-    <link href="dasher/userinterface.css" rel="stylesheet" />
-    <link href="dasher/keyboard.css" rel="stylesheet" />
+    <link href="dasher-web/browser/dasher/userinterface.css" rel="stylesheet" />
+    <link href="keyboard.css" rel="stylesheet" />
 </head>
 <body
 ><script src="captivewebview.js"></script><script>
-    CaptiveWebView.whenLoaded("dasher/keyboard.js");
+    CaptiveWebView.whenLoaded("keyboard.js");
 </script><h1 id="loading">Loading ...</h1
 ></body>
 </html>
