Complete second tranche of file moves, which are for iOS, and update import paths in JS
Signed-off-by: Jim Hawkins <sjjhsjjhsjjh@gmail.com>

--- a/Keyboard/WebResources/Main.html
+++ b/Keyboard/WebResources/Main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><!--
 
-(c) 2020 The ACE Centre-North, UK registered charity 1089313.
+(c) 2021 The ACE Centre-North, UK registered charity 1089313.
 MIT licensed, see https://opensource.org/licenses/MIT
 
 --><head>
@@ -18,7 +18,7 @@ MIT licensed, see https://opensource.org/licenses/MIT
         /* No border in between small-print items.*/
         .small-print + .small-print {border: none;}
     </style>
-    <link href="dasher/userinterface.css" rel="stylesheet" />
+    <link href="dasher-web/browser/dasher/userinterface.css" rel="stylesheet" />
 </head>
 <body
 ><script src="captivewebview.js"></script
@@ -56,7 +56,7 @@ MIT licensed, see https://opensource.org/licenses/MIT
         >This is a proof of concept application and isn't intended for
         production use.</p
     ><p
-        >&copy; 2020 The ACE Centre-North, UK registered charity 1089313.</p
+        >&copy; 2021 The ACE Centre-North, UK registered charity 1089313.</p
     ></div
 ></body>
 </html>
