--- a/Keyboard/WebResources/captivedasher.html
+++ b/Keyboard/WebResources/captivedasher.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html><!--
 
-(c) 2020 The ACE Centre-North, UK registered charity 1089313.
+(c) 2021 The ACE Centre-North, UK registered charity 1089313.
 MIT licensed, see https://opensource.org/licenses/MIT
 
 --><head>
@@ -19,11 +19,11 @@ MIT licensed, see https://opensource.org/licenses/MIT
             margin-top: 2rem;
         }
     </style>
-    <link href="dasher/userinterface.css" rel="stylesheet" />
+    <link href="dasher-web/browser/dasher/userinterface.css" rel="stylesheet" />
 </head>
 <body
 ><script src="captivewebview.js"></script><script>
-    CaptiveWebView.whenLoaded("dasher/captivedasher.js");
+    CaptiveWebView.whenLoaded("captivedasher.js");
 </script><h1 id="loading">Loading ...</h1
 ></body>
 </html>
